2004-11-14  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>

	* mi-util.el (mode-info-static-when): New macro.

	* mi-elisp.el (mode-info-elisp-insert-button): Use
	insert-text-button if it is bound.

	* mi-config.el (mode-info-advise-describe-commands): Enable for
	emacsen with `define-button-type', such as Emacs-21.3.50.
	(toplevel): Define buttons for help-mode if define-button-type is
	bound.

2004-01-03  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mode-info.el (mode-info-version): Release 0.8.
	(mode-info-show-document): Not activate the mark which is moved to
	the top of the specified document.

2003-12-14  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mi-elisp.el (describe-variable-internal): Treat buffer-local
	variable.

2003-02-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mi-config.el (mode-info-advise-describe-commands): Disable for
	emacsen with `define-button-type', such as Emacs-21.3.50.

	* elisp-comp.in (elisp-comp-target): Exclude `mi-fontify.el' from
	target files for Mule2.

2003-01-13  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mode-info.el (mode-info-version): Release 0.1.4.
	(mode-info-class-alist): Add make.

	* mi-make.el: New file.

	* mi-index.el (make-index-file): Only when the entry regular
	expression is defined, `process-node' method is called.
	(mode-info-process-index-node-1): Strict checking the type of
	`line'.

	* mi-emacs.el (process-node): Abolished.

	* mi-gauche.el (process-node): Abolished.

2002-09-25  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mi-util.el (mode-info-obarray, mode-info-method-obarray): Use 0
	instead of nil as the initial value for the new obarray.

2002-08-30  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mode-info.el (mode-info-version): Release 0.1.3.

	* mi-index.el (mode-info-make-index): Fix the bug that misses
	candidate titles.

2002-07-30  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mode-info.el (mode-info-version): Release 0.1.2.
	(mode-info-class-alist): Add guile and scheme.
